--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,16 +1,22 @@
 asgiref==3.8.1
 attrs==23.2.0
-Django==4.0
+cffi==1.16.0
+cryptography==42.0.8
+Django==4.2.9
+django-debug-toolbar==4.4.2
 django-rest-framework==0.1.0
+django-rest-knox==4.2.0
 djangorestframework==3.15.1
 drf-spectacular==0.27.2
 drf-spectacular-sidecar==2024.6.1
+drfpasswordless==1.5.9
 inflection==0.5.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 phonenumbers==8.13.37
 pillow==10.3.0
 psycopg2-binary==2.9.9
+pycparser==2.22
 python-dotenv==1.0.1
 PyYAML==6.0.1
 referencing==0.35.1
