--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,6 +10,7 @@ cryptography==42.0.8
 Django==4.2.9
 django-cors-headers==4.3.1
 django-debug-toolbar==4.4.2
+django-phonenumber-field==7.3.0
 django-rest-framework==0.1.0
 django-rest-knox==4.2.0
 djangorestframework==3.15.1
@@ -19,6 +20,7 @@ drfpasswordless==1.5.9
 frozenlist==1.4.1
 idna==3.7
 inflection==0.5.1
+install==1.3.5
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 Markdown==3.6
