--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -20,6 +20,7 @@ drf-spectacular-sidecar==2024.6.1
 drfpasswordless==1.5.9
 frozenlist==1.4.1
 gunicorn==22.0.0
+httpagentparser==1.9.5
 idna==3.7
 inflection==0.5.1
 install==1.3.5
