--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query-devtools": "^5.45.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
@@ -21,18 +23,23 @@
     "clsx": "^2.1.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "formik": "^2.4.6",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.396.0",
     "next": "13.4.1",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0"
