--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query-devtools": "^5.45.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "20.1.0",
@@ -21,11 +25,13 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "formik": "^2.4.6",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.396.0",
+    "nanoid": "^5.0.7",
     "next": "13.4.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -33,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
+    "react-phone-number-input": "^3.4.3",
     "react-query": "^3.39.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
