--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "formik": "^2.4.6",
@@ -38,6 +39,7 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
