--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@tanstack/react-query-devtools": "^5.45.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "20.1.0",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
@@ -60,6 +59,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/next-auth": "^3.15.0"
+    "@types/next-auth": "^3.15.0",
+    "@types/react": "^17.0.52"
   }
 }
