--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-query-devtools": "^5.45.1",
     "@tanstack/react-table": "^8.17.3",
     "@total-typescript/ts-reset": "^0.5.1",
@@ -50,7 +51,6 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
-    "react-query": "^3.39.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
