--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
+    "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
