--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
     "react-spinners": "^0.14.1",
