implement campaign update functionality

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "formik": "^2.4.6",
     "input-otp": "^1.2.4",
     "libphonenumber-js": "^1.11.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.396.0",
     "nanoid": "^5.0.7",
     "next": "13.4.1",
