--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nanoid": "^5.0.7",
     "next": "13.4.1",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
     "next13-progressbar": "^1.2.1",
     "postcss": "8.4.23",
