--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
@@ -57,6 +57,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
+    "react-multi-select-component": "^4.3.4",
     "react-phone-number-input": "^3.4.3",
     "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
