--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/next-auth": "^3.15.0",
     "@types/react": "^17.0.52"
   }
