--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-icons": "^5.2.1",
     "react-multi-select-component": "^4.3.4",
     "react-phone-number-input": "^3.4.3",
+    "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -66,12 +67,14 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
+    "ua-parser-js": "^1.0.38",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
     "@types/next-auth": "^3.15.0",
-    "@types/react": "^17.0.52"
+    "@types/react": "^17.0.52",
+    "@types/ua-parser-js": "^0.7.39"
   }
 }
