--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -22,6 +22,9 @@ frozenlist==1.4.1
 gunicorn==22.0.0
 httpagentparser==1.9.5
 idna==3.7
+inflection==0.5.1
+install==1.3.5
+ipapi==1.0.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 Markdown==3.6
@@ -43,7 +46,9 @@ shortuuid==1.0.13
 sqlparse==0.5.0
 starkbank-ecdsa==2.2.0
 twilio==9.1.1
+ua-parser==0.18.0
 uritemplate==4.1.1
 urllib3==2.2.1
+user-agents==2.2.0
 whitenoise==6.6.0
 yarl==1.9.4
